uncenter artworks, fix university-list item overflow by replacing to mobile version

--- a/src/app/artwork-list/artwork-list.module.scss
+++ b/src/app/artwork-list/artwork-list.module.scss
@@ -8,7 +8,7 @@
     margin: 0px;
 
     @media screen and (max-width: 1024px) {
-        justify-content: center;
+        // justify-content: center;
         gap: 20px;
     }
 }
